--- a/index.html
+++ b/index.html
@@ -1,13 +1,179 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Nikhil Sai – Portfolio</title>
-<link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Nikhil Sai – Portfolio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
+  <style>
+  /* Colorful palette */
+  :root {
+    --accent: #6a5acd;
+    --accent2: #ff6b6b;
+    --accent3: #4dd2ff;
+    --bg: #0a0a0f;
+    --card: #14141c;
+  }
+
+  body {
+    background: var(--bg);
+    overflow-x: hidden;
+  }
+
+  /* Parallax */
+  .parallax {
+    background-image: url('https://images.unsplash.com/photo-1522199755839-a2bacb67c546');
+    height: 60vh;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 48px;
+    font-weight: 800;
+    text-shadow: 0 4px 20px rgba(0,0,0,0.6);
+  }
+
+  /* Smooth fade animation */
+  @keyframes fadeUp {
+    from { opacity: 0; transform: translateY(30px);} 
+    to { opacity: 1; transform: translateY(0);} 
+  }
+  .fadeUp { animation: fadeUp 1.2s ease forwards; }
+
+  /* Floating card animation */
+  @keyframes float {
+    0% { transform: translateY(0px); }
+    50% { transform: translateY(-8px); }
+    100% { transform: translateY(0px); }
+  }
+  .float { animation: float 4s ease-in-out infinite; }
+
+  /* Glow hover */
+  .card:hover {
+    box-shadow: 0 0 25px var(--accent3);
+    transform: translateY(-6px);
+    transition: 0.3s ease;
+  }
+
+  /* Gradient headings */
+  h2 {
+    background: linear-gradient(90deg, var(--accent), var(--accent2));
+    -webkit-background-clip: text;
+    color: transparent;
+    font-weight: 800;
+  }
+    body {
+      margin: 0;
+      font-family: 'Inter', sans-serif;
+      background: #0d0d0d;
+      color: #ffffff;
+      line-height: 1.6;
+    }
+    header {
+      padding: 50px 80px;
+      text-align: left;
+      background: #000000;
+      border-bottom: 2px solid #2e2e2e;
+    }
+    header h1 {
+      font-size: 48px;
+      font-weight: 800;
+      margin: 0;
+    }
+    header p {
+      font-size: 20px;
+      opacity: 0.8;
+      max-width: 600px;
+    }
+    .section {
+      padding: 60px 80px;
+      border-bottom: 1px solid #2e2e2e;
+    }
+    .section h2 {
+      font-size: 32px;
+      font-weight: 700;
+      margin-bottom: 20px;
+      color: #e0e0e0;
+    }
+    .card {
+      background: #1a1a1a;
+      padding: 20px;
+      border-radius: 12px;
+      margin-bottom: 20px;
+      border: 1px solid #333;
+    }
+    .card h3 {
+      margin-top: 0;
+      font-size: 22px;
+      font-weight: 700;
+      color: #f0f0f0;
+    }
+    .contact {
+      font-size: 18px;
+      margin-top: 10px;
+    }
+    a {
+      color: #66a3ff;
+      text-decoration: none;
+      font-weight: 600;
+    }
+    a:hover { opacity: 0.8; }
+    /* Animations */
+  @keyframes fadeIn { from { opacity:0; transform:translateY(20px);} to {opacity:1; transform:translateY(0);} }
+  .fade { animation: fadeIn 1s ease forwards; }
+  .project-grid { display:grid; grid-template-columns:repeat(auto-fit,minmax(280px,1fr)); gap:20px; margin-top:30px; }
+  .project-card { background:#111; padding:20px; border-radius:12px; border:1px solid #333; animation: fadeIn 1s ease; }
+  .project-card img { width:100%; border-radius:10px; margin-bottom:12px; }
+  .case-section { background:#0b0b0b; padding:40px; border-radius:14px; margin-top:40px; animation: fadeIn 1s ease; }
+/* Additional Upgrades */
+  /* Glassmorphism */
+  .glass {
+    backdrop-filter: blur(12px);
+    background: rgba(255,255,255,0.06);
+    border: 1px solid rgba(255,255,255,0.1);
+    box-shadow: 0 8px 32px rgba(0,0,0,0.3);
+  }
+
+  /* Animated skill bars */
+  .skill-bar {
+    position: relative;
+    height: 10px;
+    background: #222;
+    border-radius: 6px;
+    margin-top: 10px;
+    overflow: hidden;
+  }
+  .skill-bar-fill {
+    height: 100%;
+    width: 0%;
+    background: linear-gradient(90deg, var(--accent), var(--accent3));
+    border-radius: 6px;
+    animation: fillBar 2s forwards;
+  }
+  @keyframes fillBar {
+    from { width: 0%; }
+    to { width: 90%; }
+  }
+
+  /* Fade-in on scroll */
+  .reveal { opacity: 0; transform: translateY(30px); transition: all 1s ease; }
+  .reveal.active { opacity: 1; transform: translateY(0); }
+</style>
+<style>
+    /* Upgraded styles */
+    body { background: #030303; }
+    .hero { padding:120px 80px; text-align:center; background:linear-gradient(135deg,#0a0a0a,#111); }
+    .hero h1 { font-size:64px; font-weight:800; margin:0; }
+    .hero p { font-size:22px; opacity:0.8; }
+    .nav { display:flex; justify-content:center; gap:40px; padding:20px; border-bottom:1px solid #222; }
+    .nav a { color:#fff; font-weight:600; }
+  </style>
 </head>
 <body>
-
 <div class="nav">
   <a href="#about">About</a>
   <a href="#experience">Experience</a>
@@ -15,35 +181,130 @@
   <a href="#skills">Skills</a>
   <a href="#education">Education</a>
 </div>
+<div class="hero">
+  <h1>Rampalli Nikhil Sai</h1>
+  <p>Curiosity-driven problem solver | Consulting & Technology | MBA Candidate</p>
+</div>
 
-<div class="parallax">Rampalli Nikhil Sai</div>
+<header>
+  <h1>Rampalli Nikhil Sai</h1>
+  <p>Driven, curious, and committed to solving meaningful problems with clarity and structured thinking. Passionate about consulting, technology, and turning complex challenges into actionable insights.</p>
+  <div class="contact">
+    <p>Email: <a href="mailto:nikhilsairampalli@gmail.com">nikhilsairampalli@gmail.com</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/rampalli-nikhil-sai-93a64a22b">Profile</a> | GitHub: <a href="https://github.com/Rampalli-Nikhil-Sai">Repositories</a></p>
+  </div>
+</header>
 
-<section id="about" class="section fadeUp glass">
+<section class="section">
   <h2>About Me</h2>
-  <p>Driven, curious, and committed to solving structured problems...</p>
+  <div class="card">
+    <p>I’m someone who genuinely enjoys breaking down problems, asking better questions, and finding structured, meaningful answers. My experience across engineering, software development, analytics, and writing has helped me develop strong analytical reasoning, communication clarity, and a calm approach to high-pressure environments.</p>
+    <p>I thrive in roles where learning is constant, teamwork is real, and the work has purpose. This is why consulting excites me—every challenge is a chance to grow while contributing to something larger than myself.</p>
+  </div>
 </section>
 
-<section id="projects" class="section fadeUp">
+<section class="section">
+  <h2>Experience</h2>
+
+  <div class="card">
+    <h3>Associate Software Engineer – Accenture</h3>
+    <p><strong>Aug 2024 – Sept 2025</strong></p>
+    <ul>
+      <li>Collaborated across teams to analyze issues, identify root causes, and deliver structured solutions for SAP systems.</li>
+      <li>Supported UAT by synthesizing defects and communicating insights for faster decision-making.</li>
+      <li>Documented processes and technical flows to improve cross-team clarity.</li>
+    </ul>
+  </div>
+
+  <div class="card">
+    <h3>Project Intern – IIT Hyderabad (5G/6G Research)</h3>
+    <p><strong>Nov 2023 – Apr 2024</strong></p>
+    <ul>
+      <li>Analyzed network simulation outputs and summarized performance insights.</li>
+      <li>Converted complex wireless research topics into clear, readable notes.</li>
+    </ul>
+  </div>
+</section>
+
+<section class="section">
+  <h2>Projects Highlight</h2>
+
+  <div class="card">
+    <h3>Market Insights & Data Interpretation</h3>
+    <p>Analyzed business datasets, calculated KPIs, and produced structured insights presented through consultant-style slide decks.</p>
+  </div>
+
+  <div class="card">
+    <h3>Process Optimization Analysis</h3>
+    <p>Mapped workflows, identified inefficiencies, and proposed improvements backed by reasoning and clarity.</p>
+  </div>
+
+  <div class="card">
+    <h3>Cloud API Documentation</h3>
+    <p>Created a full Markdown-based API documentation project focused on clarity, usability, and developer experience.</p>
+  </div>
+
+</section>
+
+<section class="section">
+  <h2>Skills</h2>
+  <div class="card">
+    <ul>
+      <li><strong>Consulting Skills:</strong> Structured thinking, synthesis, problem solving, stakeholder communication</li>
+      <li><strong>Tools:</strong> Excel, PowerPoint, Python, Git, Markdown</li>
+      <li><strong>Technical:</strong> SAP ABAP basics, APIs, Linux/Ubuntu</li>
+      <li><strong>Soft Skills:</strong> Clarity, resilience, curiosity, ownership, empathy</li>
+    </ul>
+  </div>
+</section>
+
+<section class="section">
+  <h2>Education</h2>
+  <div class="card">
+    <p><strong>MBA (Pursuing)</strong> — NMIMS (2025 – Present)</p>
+    <p><strong>B.Tech CSE</strong> — Mallareddy College of Engineering and Technology (2020 – 2024)</p>
+  </div>
+</section>
+
+<section class="section">
+  <h2>Achievements</h2>
+  <div class="card">
+    <ul>
+      <li>HackerRank Gold Badge — Python</li>
+      <li>Coursera Certifications in IoT and Android Programming</li>
+    </ul>
+  </div>
+</section>
+
+<section class="section">
+  <h2>Hobbies</h2>
+  <div class="card">
+    <p>Content creation, robotics, writing, observing businesses, and exploring how things work behind the scenes.</p>
+  </div>
+</section>
+
+<section id="projects" class="section fade">
   <h2>Projects</h2>
   <div class="project-grid">
-    <div class="project-card glass">
-      <img src="assets/project1.png" />
+    <div class="project-card">
+      <img src="https://via.placeholder.com/400x250" alt="Robot Image" />
       <h3>Face Recognition Robot</h3>
-      <p>Real‑time tracking robot using Raspberry Pi.</p>
+      <p>A Raspberry Pi powered robot capable of identifying faces and tracking movement in real-time.</p>
     </div>
-    <div class="project-card glass">
-      <img src="assets/project2.png" />
-      <h3>Marketing Dashboard</h3>
-      <p>PowerBI dashboard with CTR, CAC, ROAS.</p>
+    <div class="project-card">
+      <img src="https://via.placeholder.com/400x250" alt="Dashboard Image" />
+      <h3>Marketing Analytics Dashboard</h3>
+      <p>Built a PowerBI dashboard visualizing CTR, CAC, ROAS and channel performance using DAX & modeling.</p>
     </div>
-    <div class="project-card glass">
-      <img src="assets/project3.png" />
-      <h3>Cloud API Docs</h3>
-      <p>Markdown‑based cloud documentation project.</p>
+    <div class="project-card">
+      <img src="https://via.placeholder.com/400x250" alt="Documentation" />
+      <h3>Cloud API Documentation</h3>
+      <p>Complete Markdown documentation of hypothetical API endpoints for developers.</p>
     </div>
   </div>
 </section>
 
-<script src="js/script.js"></script>
+
+
 </body>
 </html>
